bauer/tests/ui/repeat-default.fail.stderr
error: `default` cannot be added with `repeat`
 --> tests/ui/repeat-default.fail.rs:5:23
  |
5 |     #[builder(repeat, default = "String::new()")]
  |                       ^^^^^^^

warning: unused variable: `field_a`
 --> tests/ui/repeat-default.fail.rs:6:5
  |
6 |     field_a: Vec<String>,
  |     ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_field_a`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
